--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Full Extract and Update
+name: Super Extract and Force Update
 
 on:
   push:
@@ -8,36 +8,40 @@ on:
 
 permissions:
   contents: write
-  actions: write  # এটি অ্যাকশন ফাইল পরিবর্তনের অনুমতি চাওয়ার জন্য
+  actions: write
 
 jobs:
-  unzip-process:
+  unzip-and-force-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: true # এটি টোকেনটি সেশনে ধরে রাখবে
+          fetch-depth: 0 # পুরো হিস্টোরি নেওয়ার জন্য
 
-      - name: Extract Everything
+      - name: Extract and Overwrite
         run: |
           ZIP_FILE=$(ls *.zip 2>/dev/null | head -n 1)
-          if [ -n "$ZIP_FILE" ] && [ -f "$ZIP_FILE" ]; then
-            echo "Extracting everything including .github folder..."
-            unzip -o "$ZIP_FILE" -d .
+          if [ -n "$ZIP_FILE" ]; then
+            unzip -o "$ZIP_FILE" -d ./temp_folder
+            # শুধু .github ফোল্ডারটি ম্যানুয়ালি কপি করা
+            cp -r ./temp_folder/.github/workflows/* .github/workflows/ 2>/dev/null || true
+            # বাকি ফাইলগুলো কপি করা
+            cp -r ./temp_folder/* . 2>/dev/null || true
+            rm -rf ./temp_folder
             rm "$ZIP_FILE"
-          else
-            echo "No zip found."
-            exit 0
           fi
 
-      - name: Push Changes
+      - name: Commit and Push with GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
           git add .
-          git commit -m "chore: full extract including workflows" || echo "No changes"
+          git commit -m "chore: force update workflows from zip" || exit 0
           
-          # সাধারণ পুশ কাজ না করলে নিচের কমান্ডটি ব্যবহার হয়
+          # সরাসরি পুশ কাজ না করলে নিচের রিমোট সেটআপটি কাজ করবে
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
           git push origin main
